fixing js of jta view + handling css/js content-type
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1531975 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/jta/jta.vm
+++ b/reporting/src/main/resources/templates/jta/jta.vm
@@ -21,7 +21,7 @@
     </div>
 
     <div id="${name}-graph" class="plot"></div>
-    #dateForm('$name')
+    #dateForm($name)
 </div>
 #end
 
@@ -83,8 +83,8 @@
 
         // update diagram when clicking on update buttons
         #foreach ($item in $parts )
-        $('#update-$item').submit(function () {
-            updateGraph($item, extractTime($('#${item}-datetimepicker-start')), extractTime($('#${item}-datetimepicker-end')), options);
+        $("#update-$item").submit(function () {
+            updateGraph("$item", extractTime($("#${item}-datetimepicker-start")), extractTime($("#${item}-datetimepicker-end")), options);
             return false;
         });
         #end
