adding counter detail page
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/monitoring/trunk@1534205 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/templates/report/report.vm
+++ b/reporting/src/main/resources/templates/report/report.vm
@@ -56,10 +56,16 @@
         </tr>
     </thead>
     <tbody>
-        #foreach( $line in $data )
+        #foreach( $line in $data.entrySet() )
             <tr>
-                #foreach( $item in $line )
-                    <td>$item</td>
+                #foreach( $item in $line.getValue() )
+                    <td>
+                        #if ($foreach.isFirst())
+                            <a href="$mapping/report/counter/$line.getKey()">$item</a>
+                        #else
+                            $item
+                        #end
+                    </td>
                 #end
             </tr>
         #end
