--- a/reporting/src/main/resources/templates/home.vm
+++ b/reporting/src/main/resources/templates/home.vm
@@ -17,12 +17,5 @@
 <h1>Home</h1>
 
 <div>
-    Welcome to the Commons Monitoring Webapp. here is the list of available pages:
-</div>
-<div>
-    <ul>
-        #foreach ( $plugin in $plugins )
-            <li><a href="$mapping$plugin.url">$plugin.name</a></li>
-        #end
-    </ul>
+    A list of available page is on the left. Click on one of them to access the desired information.
 </div>
