--- a/reporting/src/main/resources/templates/page.vm
+++ b/reporting/src/main/resources/templates/page.vm
@@ -15,51 +15,86 @@
   limitations under the License.
 *#
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <title>Monitoring HTML Report</title>
+    <title>Sirona</title>
 
-    <link rel="stylesheet" href="$mapping/resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="$mapping/resources/css/bootstrap-datetimepicker.min.css">
-    <link rel="stylesheet" href="$mapping/resources/css/monitoring.css">
-  </head>
-  <body>
-      <div class="navbar navbar-inverse">
-          <div class="navbar-inner">
-              <div class="container">
-                  <a class="brand" href="http://commons.apache.org/sandbox/commons-monitoring/">Commons Monitoring</a>
-                  <div class="nav-collapse">
-                      <ul class="nav">
-                          #if ( $templateId == "home")
-                            <li class="active">
-                          #else
-                            <li>
-                          #end
-                              <a href="$mapping/">Home</a>
-                          </li>
-                          #foreach ( $plugin in $plugins )
-                              #if ( $templateId == $plugin.name )
-                                <li class="active">
-                              #else
-                                <li>
-                              #end
-                                  <a href="$mapping$plugin.url">$plugin.name</a>
-                              </li>
-                          #end
-                      </ul>
-                      <ul class="nav pull-right">
-                          <li><a href="http://www.apache.org/">ASF</a></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
-      </div>
+    <!-- Bootstrap core CSS -->
+    <link href="$mapping/resources/css/bootstrap.css" rel="stylesheet">
 
-      <script type="text/javascript" src="$mapping/resources/js/jquery.min.js"></script>
+    <!-- Add custom CSS here -->
+    <link href="$mapping/resources/css/sb-admin.css" rel="stylesheet">
+    <link rel="stylesheet" href="$mapping/resources/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="$mapping/resources/css/sirona.css">
+    <!-- Page Specific CSS -->
+    <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
 
-      #parse( "/templates/$currentTemplate" )
-  </body>
+    <!-- js shared accross pages -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+</head>
+
+<body>
+
+<div id="wrapper">
+
+<!-- Sidebar -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="http://sirona.incubator.apache.org/">Sirona</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav side-nav" id="plugins">
+            #if ( $templateId == "home")
+            <li class="active">
+            #else
+            <li>
+            #end
+                <a href="$mapping/">Home</a>
+            </li>
+            #foreach ( $plugin in $plugins )
+                #if ( $templateId == $plugin.name )
+                <li class="active">
+                #else
+                <li>
+                #end
+                <a href="$mapping$plugin.url">$plugin.name</a>
+            </li>
+            #end
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right navbar-user">
+            <li><a href="http://www.apache.org/">Apache Software Foundation</a></li>
+        </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
+
+<div id="page-wrapper">
+    #parse( "/templates/$currentTemplate" )
+</div><!-- /#page-wrapper -->
+
+</div><!-- /#wrapper -->
+
+<!-- Bootstrap core JavaScript -->
+<script src="$mapping/resources/js/bootstrap.js"></script>
+<!-- Page Specific Plugins -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
+<script src="$mapping/resources/js/morris/chart-data-morris.js"></script>
+<script src="$mapping/resources/js/tablesorter/jquery.tablesorter.js"></script>
+<script src="$mapping/resources/js/tablesorter/tables.js"></script>
+</body>
 </html>
