fixing css after the upgrade to bootstrap 3 and sb-admin theme - still some enhancement todo but at least we are as good as before
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1537154 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/resources/css/sirona.css
+++ b/reporting/src/main/resources/resources/css/sirona.css
@@ -14,25 +14,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-table .blue {
-    color: #049cdb;
-    border-bottom-color: #049cdb;
+.smooth-box {
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+}
+.align-bottom {
+    margin-bottom: 0;
 }
 
-th#report-table {
-    text-align: center;
-}
-
-.tablesorter-headerAsc {
-    background-image: url('$mapping/resources/images/asc.gif');
-    background-repeat: no-repeat;
-    background-position: right;
-}
-
-.tablesorter-headerDesc {
-    background-image: url('$mapping/resources/images/desc.gif');
-    background-repeat: no-repeat;
-    background-position: right;
+.space {
+    margin-left: 5px;
 }
 
 ul.jmx {
