--- a/reporting/src/main/resources/templates/jta/jta.vm
+++ b/reporting/src/main/resources/templates/jta/jta.vm
@@ -15,7 +15,7 @@
   limitations under the License.
 *#
 #macro ( graph $name )
-<div class="span4">
+<div class="col-lg-4">
     <div class="page-header">
         <h2>$name</h2>
     </div>
