using sb-admin panel for graphs
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1537164 13f79535-47bb-0310-9956-ffa450edef68

--- a/reporting/src/main/resources/resources/css/bootstrap.css
+++ b/reporting/src/main/resources/resources/css/bootstrap.css
@@ -749,6 +749,8 @@ pre code {
 .col-lg-12 {
   position: relative;
   min-height: 1px;
+  padding-right: 2px;
+  padding-left: 2px;
 }
 .col-xs-1,
 .col-xs-2,
