--- a/reporting/src/main/resources/templates/jvm/jvm.vm
+++ b/reporting/src/main/resources/templates/jvm/jvm.vm
@@ -25,6 +25,7 @@
                         <i class="icon-table"></i>Computer Info
                     </h3>
                 </div>
+                #if ($name)
                 <div class="panel-body">
                     <table id="cpu-table" class="table table-bordered table-striped table-hover">
                         <tbody>
@@ -35,6 +36,7 @@
                         </tbody>
                     </table>
                 </div>
+                #end
             </div>
         </div>
         <div class="col-lg-6">
@@ -46,6 +48,7 @@
                         <i class="icon-table"></i>Memory Status
                     </h3>
                 </div>
+                #if ($initMemory)
                 <div class="panel-body">
                     <table id="memory-table" class="table table-bordered table-striped table-hover">
                         <tbody>
@@ -54,6 +57,7 @@
                         </tbody>
                     </table>
                 </div>
+                #end
             </div>
         </div>
     </div>
