--- a/reporting/src/main/resources/templates/status/home.vm
+++ b/reporting/src/main/resources/templates/status/home.vm
@@ -20,7 +20,13 @@
     Here is the list of available nodes with their status:
     <ul>
         #foreach ($node in $nodes.entrySet())
-            <li><a href="$mapping/status/$node.key">$node.key<a/>: $node.value.status</li>
+            #set($status = $node.value.status)
+            #set($statusClass = $helper.map($status))
+            <li>
+                <div class="alert alert-$statusClass">
+                    <a class="alert-$statusClass" href="$mapping/status/$node.key">$node.key</a>: $status
+                </div>
+            </li>
         #end
     </ul>
 </div>
