fixing css for report table
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1539352 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/page.vm
+++ b/server/reporting/src/main/resources/templates/page.vm
@@ -26,8 +26,9 @@
 
     <link href="$mapping/resources/css/bootstrap.css" rel="stylesheet">
     <link href="$mapping/resources/css/sb-admin.css" rel="stylesheet">
-    <link rel="stylesheet" href="$mapping/resources/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="$mapping/resources/css/sirona.css">
+    <link href="$mapping/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
+    <link href="$mapping/resources/css/tablesorter.bootstrap.css" rel="stylesheet" >
+    <link href="$mapping/resources/css/sirona.css" rel="stylesheet" >
 
     #* js shared accross pages so we need to put it in <head /> if content pages uses it in $()) *#
     <script src="$mapping/resources/js/jquery.min.js"></script>
