--- a/server/reporting/src/main/resources/resources/css/bootstrap.css
+++ b/server/reporting/src/main/resources/resources/css/bootstrap.css
@@ -2134,8 +2134,8 @@ input[type="button"].btn-block {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+  src: url("$mapping/resources/fonts/glyphicons-halflings-regular.eot");
+  src: url("$mapping/resources/fonts/glyphicons-halflings-regular.eot?#iefix") format('embedded-opentype'), url("$mapping/resources/fonts/glyphicons-halflings-regular.woff") format('woff'), url("$mapping/resources/fonts/glyphicons-halflings-regular.ttf") format('truetype'), url("$mapping/resources/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular") format('svg');
 }
 .glyphicon {
   position: relative;
