add a Gauge for heap off memory usage
git-svn-id: https://svn.apache.org/repos/asf/incubator/sirona/trunk@1540615 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/reporting/src/main/resources/templates/jvm/jvm.vm
+++ b/server/reporting/src/main/resources/templates/jvm/jvm.vm
@@ -60,6 +60,29 @@
             </div>
             #end
         </div>
+
+        <div class="col-lg-6">
+            #graphBlock("Used Non Heap Memory", "nonheapmemory")
+
+            #if ($initMemory)
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <i class="icon-table"></i>Memory Status
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <table id="memory-table" class="table table-bordered table-striped table-hover">
+                            <tbody>
+                            <tr><td>Init</td><td>$initNonHeapMemory</td></tr>
+                            <tr><td>Max</td><td>$maxNonHeapMemory</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            #end
+        </div>
+
     </div>
 </div>
 
@@ -113,5 +136,6 @@
         // update diagram when clicking on update buttons
         Sirona.initGraph("$mapping", 'jvm', 'cpu', cpuOptions);
         Sirona.initGraph("$mapping", 'jvm', 'memory', memoryOptions);
+        Sirona.initGraph("$mapping", 'jvm', 'nonheapmemory', memoryOptions);
     });
 </script>
